--- a/www/images/ptaci/čejka_trnitá/data.yml
+++ b/www/images/ptaci/čejka_trnitá/data.yml
@@ -31,6 +31,9 @@ popis:
     - file: čejka_trnitá.jpg
       url: https://commons.wikimedia.org/wiki/File:Flickr_-_Rainbirder_-_Spur-winged_Plover_(Vanellus_spinosus).jpg
       zdroj: wikipedia
+    - file: čejka_trnitá_samice.jpg
+      url: https://commons.wikimedia.org/wiki/File:Spur-winged_lapwing_with_chicks.jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: vodní
