--- a/www/images/ptaci/marabu_africký/data.yml
+++ b/www/images/ptaci/marabu_africký/data.yml
@@ -30,6 +30,9 @@ popis:
     - file: marabu_africký.jpg
       url: https://commons.wikimedia.org/wiki/File:Marabou_Stork_(Leptoptilos_crumeniferus)_(0321)_-_Relic38.jpg
       zdroj: wikipedia
+    - file: marabu_africký_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:Marabou_Stork_in_Flight_(2405319172).jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: vodní
