--- a/www/images/ptaci/pěnkavák_sněžný/data.yml
+++ b/www/images/ptaci/pěnkavák_sněžný/data.yml
@@ -32,6 +32,9 @@ popis:
     - file: pěnkavák_sněžný.jpg
       url: https://commons.wikimedia.org/wiki/File:White-winged_Snow-Finch_-_Lessinia_-_Italy_S4E3586_(22203846544).jpg
       zdroj: wikipedia
+    - file: pěnkavák_sněžný_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:Snowfinch.jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: pěvci
