Update missing birds

--- a/www/images/ptaci/rákosník_ostřicový/data.yml
+++ b/www/images/ptaci/rákosník_ostřicový/data.yml
@@ -38,7 +38,7 @@ popis:
       - žlutá
     fotky:
     - file: rákosník_ostřicový.jpg
-      url: https://commons.wikimedia.org/wiki/File:Seggenrohrsaenger_hand.jpg
+      url: https://commons.wikimedia.org/wiki/File:Acrocephalus_paludicola_5_by-dpc.jpg
       zdroj: wikipedia
     kropenatost: true
   samice: []
