--- a/www/images/ptaci/slavík_tmavý/data.yml
+++ b/www/images/ptaci/slavík_tmavý/data.yml
@@ -31,6 +31,9 @@ popis:
     - file: slavík_tmavý.jpg
       url: https://commons.wikimedia.org/wiki/File:Nightingale_of_ancient_Uglich.JPG
       zdroj: wikipedia
+    - file: slavík_tmavý_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:%D0%9E%D0%B1%D1%8B%D0%BA%D0%BD%D0%BE%D0%B2%D0%B5%D0%BD%D0%BD%D1%8B%D0%B9_%D1%81%D0%BE%D0%BB%D0%BE%D0%B2%D0%B5%D0%B9,_%D0%92%D0%BB%D0%B0%D0%B4%D0%B8%D0%BC%D0%B8%D1%80%D1%81%D0%BA%D0%B0%D1%8F_%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C.tiff
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: pěvci
