--- a/www/images/ptaci/sup_bělohlavý/data.yml
+++ b/www/images/ptaci/sup_bělohlavý/data.yml
@@ -39,6 +39,9 @@ popis:
     - file: sup_bělohlavý.jpg
       url: https://commons.wikimedia.org/wiki/File:Buitre_Leonado_(98727731).jpeg
       zdroj: wikipedia
+    - file: sup_bělohlavý_samec.jpg
+      url: https://commons.wikimedia.org/wiki/File:Buitre_leonado_1.jpg
+      zdroj: wikipedia
     kropenatost: false
   samice: []
 typ: dravci
