Update fixed todos

--- a/www/images/ptaci/ostralka_štíhlá/data.yml
+++ b/www/images/ptaci/ostralka_štíhlá/data.yml
@@ -30,7 +30,7 @@ popis:
       - černá
     fotky:
     - file: ostralka_štíhlá.jpg
-      url: https://commons.wikimedia.org/wiki/File:Northern_Pintails_(Male_&_Female)_I_IMG_0911.jpg
+      url: https://commons.wikimedia.org/wiki/File:555593995jeyantsai14.jpg
       zdroj: wikipedia
     kropenatost: true
   samice:
@@ -62,7 +62,7 @@ popis:
       - černá
     fotky:
     - file: ostralka_štíhlá_samice_1.jpg
-      url: https://commons.wikimedia.org/wiki/File:Anas_A_acuta_Anas_acuta_L1758_Northern_Pintail_Female.jpg
+      url: https://commons.wikimedia.org/wiki/File:Anas_acuta5.jpg
       zdroj: wikipedia
     kropenatost: true
 typ: vodní
