--- a/www/images/ptaci/potápka_malá/data.yml
+++ b/www/images/ptaci/potápka_malá/data.yml
@@ -32,7 +32,7 @@ popis:
       - černá
     fotky:
     - file: potápka_malá.jpg
-      url: https://commons.wikimedia.org/wiki/File:Tachybaptus_ruficollis_1_(Marek_Szczepanek).jpg
+      url: https://commons.wikimedia.org/wiki/File:Mergulh%C3%A3o-pequeno,_em_plumagem_nupcial,_Little_Grebe,_on_bridal_plumage_(53564070632).jpg
       zdroj: wikipedia
     - file: potápka_malá_samec_1.jpg
       url: https://commons.wikimedia.org/wiki/File:Little_Grebe.jpg
