--- a/www/images/ptaci/potápka_rudokrká/data.yml
+++ b/www/images/ptaci/potápka_rudokrká/data.yml
@@ -33,7 +33,7 @@ popis:
       - žlutá
     fotky:
     - file: potápka_rudokrká.jpg
-      url: https://commons.wikimedia.org/wiki/File:Podiceps_griseigena_1_(Marek_Szczepanek).jpg
+      url: https://commons.wikimedia.org/wiki/File:Podiceps_grisegena_(33665871935).jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
