--- a/www/images/ptaci/potáplice_malá/data.yml
+++ b/www/images/ptaci/potáplice_malá/data.yml
@@ -29,7 +29,7 @@ popis:
       - černá
     fotky:
     - file: potáplice_malá.jpg
-      url: https://commons.wikimedia.org/wiki/File:Flickr_-_Rainbirder_-_Red-throated_Diver_(Gavia_stellata)_(1).jpg
+      url: https://commons.wikimedia.org/wiki/File:Gavia_stellata_-Iceland_-swimming-8.jpg
       zdroj: wikipedia
     - file: potáplice_malá_samec_1.jpg
       url: https://commons.wikimedia.org/wiki/File:Gavia_stellata_070226_BAS.jpg
