--- a/www/images/ptaci/raroh_jižní/data.yml
+++ b/www/images/ptaci/raroh_jižní/data.yml
@@ -38,7 +38,7 @@ popis:
       url: https://commons.wikimedia.org/wiki/File:Falco_biarmicus_domesticated.jpg
       zdroj: wikipedia
     - file: raroh_jižní_samec_1.jpg
-      url: https://commons.wikimedia.org/wiki/File:Falco_biarmicus_dive.jpg
+      url: https://commons.wikimedia.org/wiki/File:Falco_biarmicus_erlangeri,_El_Achir,_Algeria_2.jpg
       zdroj: wikipedia
     kropenatost: true
   samice: []
