--- a/www/images/ptaci/zrzohlávka_rudozobá/data.yml
+++ b/www/images/ptaci/zrzohlávka_rudozobá/data.yml
@@ -59,7 +59,7 @@ popis:
       - žlutá
     fotky:
     - file: zrzohlávka_rudozobá_samice_1.jpg
-      url: https://commons.wikimedia.org/wiki/File:Female_Red-crested_Pochard_800.jpg
+      url: https://commons.wikimedia.org/wiki/File:Netta_rufina_(36203241945).jpg
       zdroj: wikipedia
     kropenatost: true
 typ: vodní
