--- a/www/images/ptaci/čírka_karolinská/data.yml
+++ b/www/images/ptaci/čírka_karolinská/data.yml
@@ -70,7 +70,7 @@ popis:
       - černá
     fotky:
     - file: čírka_karolinská_samice.jpg
-      url: https://upload.wikimedia.org/wikipedia/commons/b/b4/Green-winged_teal_in_Central_Park_%2854312%29.jpg
+      url: https://commons.wikimedia.org/wiki/File:Green-winged_teal_in_Central_Park_(54312).jpg
       zdroj: wikipedia
     kropenatost: true
 typ: vodní
