--- a/www/images/ptaci/rákosník_plavý/data.yml
+++ b/www/images/ptaci/rákosník_plavý/data.yml
@@ -30,7 +30,7 @@ popis:
       - hnědá
     fotky:
     - file: rákosník_plavý.jpg
-      url: https://commons.wikimedia.org/wiki/File:Paddyfield_Warbler_(Acrocephalus_agricola)_in_Kolkata_Im_IMG_0496.jpg
+      url: https://commons.wikimedia.org/wiki/File:Paddyfield_warbler_01.jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
