--- a/www/images/ptaci/tenkozobec_opačný/data.yml
+++ b/www/images/ptaci/tenkozobec_opačný/data.yml
@@ -31,7 +31,7 @@ popis:
       url: https://commons.wikimedia.org/wiki/File:Recurvirostra_avosetta(tennouji_zoo).jpg
       zdroj: wikipedia
     - file: tenkozobec_opačný_samec_1.jpg
-      url: https://commons.wikimedia.org/wiki/File:Recurvirostra_avosetta_3.jpg
+      url: https://commons.wikimedia.org/wiki/File:Alfaiate,_Pied_Avocet_(52708677949).jpg
       zdroj: wikipedia
     kropenatost: false
   samice: []
